# nirv-parse

./: README.md  setup.cfg  setup.py
NIRVparse/: builtin_descriptions.py  find_html.py  gen_json.py  inputs.py  process_csv.py
nirv-parse/: builtin_descriptions.py  inputs.py  parser.py  process_csv.py
