[metadata]
name = NIRVparse
download_url = https://github.com/ni-report-viewer/nirv-parse
author = NIRVparse developers
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

platforms = OS Independent

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.7
install_requires =
    dask
    click
    pybids

zip_safe = False
include_package_data = True
packages = find:
